--- a/lib/erl_interface/src/openssl/README
+++ b/lib/erl_interface/src/openssl/README
@@ -1,3 +1,6 @@
+<!-- SPDX-License-Identifier: Apache-2.0 -->
+<!-- SPDX-FileCopyrightText: 2024 Erlang/OTP and its contributors -->
+
 This directory contains a *very* small part of OpenSSL. Currently only parts
 of the OpenSSL MD5 implementation.
 
